# CrimeHotspots-CyberHackathon

./: README.md  Title_page.pptx  app.py  crimespot.txt  packages_needed.txt  pyproject.toml
.streamlit/: config.toml
assets/: map_data.py
attached_assets/: map.html
pages/: ai_insights.py  dashboard.py  predictions.py  search.py
utils/: ai_analysis.py  analysis.py  crime_predictor.py  data_processing.py  data_processor.py  map_visualization.py  map_visualizer.py  prediction.py  visualizer.py
