[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "djaodjin-pages>=0.8.3",
    "folium>=0.19.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.43.2",
    "scikit-learn>=1.6.1",
    "openpyxl>=3.1.5",
    "openai>=1.68.2",
]
